--- a/assets/sass/accelerator-program/index.scss
+++ b/assets/sass/accelerator-program/index.scss
@@ -5,6 +5,25 @@
 
 .accelerator {
   position: relative;
+
+  .clouds {
+    img {
+      opacity: 0.3;
+    }
+    &-1 {
+      position: absolute;
+      top: 200px;
+      left: 50%;
+      transform: translate(-50%);
+    }
+    &-2 {
+      position: absolute;
+      top: 0px;
+      left: 50%;
+      transform: translate(10%);
+    }
+  }
+
   &-header {
     .partners-img {
       width: 420px;
@@ -16,11 +35,6 @@
       top: 0px;
       left: 0px;
     }
-  }
-  .cloud {
-    right: 0px;
-    width: 850px;
-    top: 120px;
   }
 
   &-banner {
