--- a/assets/sass/announcements/page.scss
+++ b/assets/sass/announcements/page.scss
@@ -157,6 +157,9 @@
       width: 100%;
       margin-bottom: 50px;
       margin-top: 40px;
+      height: 45vw;
+      max-height: 600px;
+      min-height: 260px;
     }
     #padding {
       height: 30px;
