--- a/assets/sass/index.scss
+++ b/assets/sass/index.scss
@@ -12,3 +12,4 @@
 @import "./footer.scss";
 @import "./notifications-protocol/index.scss";
 @import "https://unpkg.com/swiper@8/swiper-bundle.min.css";
+@import './policy.scss';
