--- a/assets/sass/notifications-protocol/index.scss
+++ b/assets/sass/notifications-protocol/index.scss
@@ -2,6 +2,16 @@
 @import "./common.scss";
 @import "./navbar.scss";
 @import "./socials.scss";
-@import "./footer.scss";
 @import "./sections.scss";
 @import "./sections-media-query.scss";
+
+
+
+#notification-page {
+    .footer{
+        margin-top: 0px;
+        &-terms{
+            display: flex;
+        }
+    }
+}
